--- a/src/style/bootstrap/breadcrumb.scss
+++ b/src/style/bootstrap/breadcrumb.scss
@@ -1,12 +1,16 @@
 .breadcrumb {
     margin: 0;
-    border-bottom: 1px solid #EEE;
     @include border-radius(0);
     padding: 6px 0;
     &>li {
         display: inline-block;
         text-shadow: 0 1px 0 #ffffff;
         margin:0;
+        .divider{
+            display:inline-block;
+            padding:0 5px;
+            color: $color-smoke;
+        }
     }
     &>.active {
         color: $color-smoke;
