LPM-862 правка линк кнопок

--- a/src/index.jade
+++ b/src/index.jade
@@ -192,7 +192,7 @@ html(lang="ru", ng-app="app")
                     div.row.example.mt3
                         div.col-l-6
                             div.color-subtitle.font-xl Dropdown
-                            span.dropdown.mt3(onclick="$(this).toggleClass('open'); $('#btn-dropdown').toggleClass('active');")
+                            span.dropdown.l-float.mt3(onclick="$(this).toggleClass('open'); $('#btn-dropdown').toggleClass('active');")
                                 a.btn.btn-default.btn-ghost.btn-m.dropdown-toggle#btn-dropdown(data-toggle="dropdown") Dropdown
                                     b.caret
                                 ul.dropdown-menu
@@ -213,7 +213,7 @@ html(lang="ru", ng-app="app")
 
                         div.col-l-6
                             div.color-subtitle.font-xl Dropup
-                            span.dropup.mt3(onclick="$(this).toggleClass('open');$('#btn-dropup').toggleClass('active');")
+                            span.dropup.l-float.mt3(onclick="$(this).toggleClass('open');$('#btn-dropup').toggleClass('active');")
                                 a.btn.btn-default.btn-ghost.btn-m.dropdown-toggle#btn-dropup(data-toggle="dropdown") Dropup
                                     b.caret
                                 ul.dropdown-menu
