--- a/src/index.jade
+++ b/src/index.jade
@@ -722,7 +722,7 @@ html(lang="ru", ng-app="app")
                     div.wind-body body
                     div.wind-footer
                         div.btn.btn-m.btn-primary Save
-                        div.btn.btn-m.btn-default.btn-ghost Cancel
+                        div.btn.btn-link Cancel
 
                 div.wind.wind-m.hidden#wind-m
                     div.wind-header Header
@@ -731,7 +731,7 @@ html(lang="ru", ng-app="app")
                     div.wind-body Повседневная практика показывает, что сложившаяся структура организации способствует подготовки и реализации соответствующий условий активизации. С другой стороны сложившаяся структура организации способствует подготовки и реализации существенных финансовых и административных условий. Товарищи! реализация намеченных плановых заданий в значительной степени обуславливает создание позиций, занимаемых участниками в отношении поставленных задач. Повседневная практика показывает, что дальнейшее развитие различных форм деятельности требуют от нас анализа существенных финансовых и административных условий. Таким образом начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствует насущным потребностям.
                     div.wind-footer.clearfix
                         div.btn.btn-m.btn-primary Сохранить
-                        div.btn.btn-m.btn-default.btn-link Отмена
+                        div.btn.btn-link Отмена
 
                 div.wind.wind-l.hidden#wind-l
                     div.wind-header Header
@@ -740,5 +740,5 @@ html(lang="ru", ng-app="app")
                     div.wind-body body
                     div.wind-footer
                         div.btn.btn-m.btn-primary Save
-                        div.btn.btn-m.btn-default.btn-ghost Cancel
+                        div.btn.btn-link Cancel
 
