--- a/src/style/bootstrap/button.scss
+++ b/src/style/bootstrap/button.scss
@@ -49,7 +49,7 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
     @extend .btn;
     font-size: $font-m;
     height: $base-button-height;
-    line-height: $base-button-height;
+    line-height: $base-button-height - 2px;
     padding: 0 $base-button-padding;
 }
 
@@ -58,7 +58,7 @@ $btm-s-height: round(($base-button-height / $btn-multiplier)/2)*2;
     @extend .btn;
     font-size: $font-s;
     height: $btm-s-height;
-    line-height: $btm-s-height;
+    line-height: $btm-s-height - 2px;
     padding: 0 ($btm-s-height/2);
 }
 
@@ -67,7 +67,7 @@ $btm-xs-height: round(($base-button-height / $btn-multiplier / $btn-multiplier)/
     @extend .btn;
     font-size: $font-xs;
     height: $btm-xs-height;
-    line-height: $btm-xs-height;
+    line-height: $btm-xs-height - 2px;
     padding: 0 ($btm-xs-height/2);
 }
 
@@ -76,7 +76,7 @@ $btm-l-height: round(($base-button-height * $btn-multiplier)/2)*2;
     @extend .btn;
     font-size: $font-l;
     height: $btm-l-height;
-    line-height: $btm-l-height;
+    line-height: $btm-l-height - 2px;
     padding: 0 ($btm-l-height / 2);
 }
 
@@ -85,7 +85,7 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     @extend .btn;
     font-size: $font-xl;
     height: $btm-xl-height;
-    line-height: $btm-xl-height;
+    line-height: $btm-xl-height - 2px;
     padding: 0 ($btm-xl-height / 2);
     //    box-shadow: inset 0 -3px 0 rgba(31,45,61,0.3);
 }
@@ -115,67 +115,76 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
 //    }
 //}
 
-.disabled {
+.btn.disabled {
     top: 0 !important;
     cursor: default;
-    background: $color-snow;
+    background: $color-dark-snow;
     color: $color-hint;
     text-shadow: none;
-    &.btn-primary,
-    &.btn-primary:hover,
-    &.btn-primary:active,
-    &.btn-primary.active,
-    &.btn-primary:active:hover,
-    &.btn-primary.active:hover {
-        background: $color-primary-disabled;
-        @include box-shadow(none);
-
+    @include box-shadow(none);
+    &:hover,
+    &:focus,
+    &:active,
+    &.active,
+    &:active:hover{
+        background: $color-dark-snow;
+        color: $color-hint;
     }
-    &.btn-success,
-    &.btn-success:hover,
-    &.btn-success:active,
-    &.btn-success.active,
-    &.btn-success:active:hover,
-    &.btn-success.active:hover {
-        background: $color-success-disabled;
-        @include box-shadow(none);
-    }
-    &.btn-info,
-    &.btn-info:hover,
-    &.btn-info:active,
-    &.btn-info.active,
-    &.btn-info:active:hover,
-    &.btn-info.active:hover {
-        background: $color-info-disabled;
-        @include box-shadow(none);
-    }
-    &.btn-warning,
-    &.btn-warning:hover,
-    &.btn-warning:active,
-    &.btn-warning.active,
-    &.btn-warning:active:hover,
-    &.btn-warning.active:hover {
-        @include box-shadow(none);
-        background: $color-warning-disabled;
-    }
-    &.btn-danger,
-    &.btn-danger:hover,
-    &.btn-danger:active,
-    &.btn-danger.active,
-    &.btn-danger:active:hover,
-    &.btn-danger.active:hover {
-        background: $color-danger-disabled;
-        @include box-shadow(none);
-    }
-    &.btn-default,
-    &.btn-default:hover,
-    &.btn-default:active,
-    &.btn-default.active,
-    &.btn-default:active:hover,
-    &.btn-default.active:hover {
-        background: $color-snow;
-        border: 1px solid $btn-ghost-border
-    }
+    //&.btn-primary,
+    //&.btn-primary:hover,
+    //&.btn-primary:active,
+    //&.btn-primary.active,
+    //&.btn-primary:active:hover,
+    //&.btn-primary.active:hover {
+    //    background: $color-primary-disabled;
+    //    @include box-shadow(none);
+    //
+    //}
+    //&.btn-success,
+    //&.btn-success:hover,
+    //&.btn-success:active,
+    //&.btn-success.active,
+    //&.btn-success:active:hover,
+    //&.btn-success.active:hover {
+    //    background: $color-success-disabled;
+    //    @include box-shadow(none);
+    //}
+    //&.btn-info,
+    //&.btn-info:hover,
+    //&.btn-info:active,
+    //&.btn-info.active,
+    //&.btn-info:active:hover,
+    //&.btn-info.active:hover {
+    //    background: $color-info-disabled;
+    //    @include box-shadow(none);
+    //}
+    //&.btn-warning,
+    //&.btn-warning:hover,
+    //&.btn-warning:active,
+    //&.btn-warning.active,
+    //&.btn-warning:active:hover,
+    //&.btn-warning.active:hover {
+    //    @include box-shadow(none);
+    //    background: $color-warning-disabled;
+    //}
+    //&.btn-danger,
+    //&.btn-danger:hover,
+    //&.btn-danger:active,
+    //&.btn-danger.active,
+    //&.btn-danger:active:hover,
+    //&.btn-danger.active:hover {
+    //    background: $color-danger-disabled;
+    //    @include box-shadow(none);
+    //}
+    //&.btn-default,
+    //&.btn-default:hover,
+    //&.btn-default:active,
+    //&.btn-default.active,
+    //&.btn-default:active:hover,
+    //&.btn-default.active:hover {
+    //    background: $color-snow;
+    //    border: 1px solid $btn-ghost-border
+    //}
 
 }
 
@@ -293,7 +302,7 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     text-shadow:none;
     &:hover {
         background: transparent;
-        color: $color-blue-dark;
+        color: $color-blue-light;
         @include box-shadow(none);
     }
     &:active,
@@ -310,7 +319,7 @@ $btm-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     text-shadow:none;
     &:hover {
         background: transparent;
-        color: $color-subtitle;
+        color: $color-blue-light;
         @include box-shadow(none);
     }
     &:active,
