--- a/src/style/bootstrap/form.scss
+++ b/src/style/bootstrap/form.scss
@@ -6,7 +6,6 @@ $input-m-padding: round($base-input-height * $input-padding-miltiplier);
 .input {
     //    box-shadow: inset 0 0 0 1px $color-smoke;
     color: $color-text;
-
     @include border-radius($base-border-radius);
     background-color: #FFF;
     display: inline-block;
@@ -119,11 +118,24 @@ $input-xl-padding: round($input-xl-height * $input-padding-miltiplier);
 
 .input-round {
     @include border-radius(1000px);
+    &.input-s {
+        padding: 0 $input-s-height/2;
+    }
+    &.input-m {
+        padding: 0 $base-input-height/2;
+    }
+    &.input-l {
+        padding: 0 $input-l-height/2;
+    }
+    &.input-xl {
+        padding: 0 $input-xl-height/2;
+    }
 }
 
 .form-group-round {
     .input {
         @include border-left-radius(1000px);
+        border-right: 0;
     }
     .btn {
         @include border-left-radius(0);
@@ -171,14 +183,14 @@ select {
     background-clip: content-box;
     border: 1px solid $color-default;
     @include border-radius(20px);
-    &.disabled{
+    &.disabled {
         @include opacity(.5);
-        cursor:default;
+        cursor: default;
     }
     &.mini {
         width: 39px;
         height: 18px;
-        &:after{
+        &:after {
             width: 18px;
             height: 18px;
         }
@@ -236,40 +248,47 @@ select {
     }
 
 }
-.range{
+
+.range {
     position: relative;
     cursor: pointer;
     .range-bar {
-        height: 4px;
-        background-color: #f3f7f9;
+        height: 7px;
+        background-color: $color-silver;
     }
     .range-pointer {
         position: absolute;
-        top: -3px;
+        top: -7px;
         left: 60%;
         z-index: 2;
-        width: 10px;
-        height: 10px;
+        width: 12px;
+        height: 20px;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
-        background-color: #fff;
-        border: 1px solid $color-default;
-        @include border-radius(50%);
-        @include transform(translate(-50%,0));
+        background-color: #FFF;
+        border: 1px solid $color-slate;
+        @include border-radius(2px);
+        @include transform(translate(-50%, 0));
+        @include box-shadow(0px 0px 5px rgba(0, 0, 0, 0.1));
+        &:hover {
+            background-color: $color-snow;
+        }
     }
     .range-selected {
         position: absolute;
         top: 0;
         width: 60%;
-        height: 4px;
+        height: 7px;
         overflow: hidden;
         background-color: $color-primary;
     }
 }
-.input-vertical{
-    margin-top:5px;
+
+.input-vertical {
+    margin-top: 5px;
 }
+
 .input-append, .input-prepend {
     display: inline-block;
     vertical-align: middle;
@@ -279,37 +298,36 @@ select {
         display: inline-block;
         width: auto;
         min-width: 16px;
-        height:32px;
+        height: $input-s-height;
         padding: 8px 5px 0;
         font-size: 14px;
         font-weight: normal;
         line-height: 1;
         text-align: center;
-        text-shadow: 0 1px 0 #ffffff;
-        background-color: #eeeeee;
-        border: 1px solid #ccc;
-        &:first-child{
+        text-shadow: 0 1px 0 #FFF;
+        background-color: #EEE;
+        border: 1px solid $color-gray;
+        &:first-child {
             @include border-left-radius($base-border-radius);
         }
-        &:last-child{
+        &:last-child {
             @include border-right-radius($base-border-radius);
         }
     }
-    input{
+    input {
         position: relative;
         margin-bottom: 0;
         vertical-align: top;
-        font-size:$base-font-size;
-        &:first-child{
+        font-size: $base-font-size;
+        &:first-child {
             @include border-right-radius(0);
-            border-right:0;
+            border-right: 0;
             @include border-left-radius($base-border-radius);
         }
-        &:last-child{
+        &:last-child {
             @include border-left-radius(0);
-            border-left:0;
+            border-left: 0;
             @include border-right-radius($base-border-radius);
-
         }
 
     }
