--- a/src/style/bootstrap/dropdown.scss
+++ b/src/style/bootstrap/dropdown.scss
@@ -36,9 +36,10 @@ $dropdown-item-hover: #F3F7F9;
     top: 50%;
     left: 0;
     z-index: 1000;
-    visibility:hidden;
-    opacity:0;
+    visibility: hidden;
+    opacity: 0;
     float: left;
+    padding:0;
     min-width: 160px;
     margin: 10px 0 0;
     font-size: $base-font-size;
@@ -73,7 +74,8 @@ $dropdown-item-hover: #F3F7F9;
         right: 50%;
         margin-right: -11px;
     }
-    &.r-float {
+    &.r-float,
+    &.r_float {
         right: 0;
         left: auto;
     }
@@ -94,13 +96,14 @@ $dropdown-item-hover: #F3F7F9;
             color: $color-text;
             white-space: nowrap;
             text-decoration: none;
-            text-align:left;
+            text-align: left;
             @include border-radius(3px);
             &:hover,
             &:focus {
                 color: $color-text;
                 text-decoration: none;
                 background-color: $dropdown-item-hover;
+                background-image: none;
             }
         }
         &.active > a,
@@ -110,6 +113,7 @@ $dropdown-item-hover: #F3F7F9;
             text-decoration: none;
             background-color: $dropdown-item-hover;
             outline: 0;
+            background-image: none;
         }
         &.disabled > a,
         &.disabled > a:hover,
@@ -121,15 +125,44 @@ $dropdown-item-hover: #F3F7F9;
     }
 }
 
-.open {
-    & > .dropdown-menu,
-    & > .custom-dropdown-menu {
-        visibility:visible;
-        opacity:1;
-        top: 100%;
+.dropdown,
+.custom-dropdown {
+    &.open {
+        & > .dropdown-menu,
+        & > .custom-dropdown-menu {
+            visibility: visible;
+            opacity: 1;
+            top: 100%;
+        }
+        & > a {
+            outline: 0;
+        }
     }
-    & > a {
-        outline: 0;
+}
+.dropup,
+.custom-dropup{
+    &.open {
+        & > .dropdown-menu,
+        & > .custom-dropdown-menu {
+            visibility: visible;
+            opacity: 1;
+            top: auto;
+            bottom: 100%;
+            margin-bottom: 10px;
+            margin-top: 0;
+            &:after,
+            &:before {
+                top: auto;
+                bottom: -10px;
+                @include transform(rotate(180deg));
+            }
+            &:before {
+                bottom: -11px;
+            }
+        }
+        & > a {
+            outline: 0;
+        }
     }
 }
 
@@ -141,7 +174,9 @@ $dropdown-item-hover: #F3F7F9;
     color: $color-subtitle;
 }
 
-.r-float {
+.r-float,
+.r_float {
+
     & > .dropdown-menu,
     & > .custom-dropdown-menu {
         right: 0;
@@ -153,7 +188,9 @@ $dropdown-item-hover: #F3F7F9;
     }
 }
 
+.l-float,
 .l-float {
+
     & > .dropdown-menu,
     & > .custom-dropdown-menu {
         left: 0;
@@ -178,15 +215,15 @@ $dropdown-item-hover: #F3F7F9;
         top: auto;
         bottom: 100%;
         margin-bottom: 10px;
-        margin-top:0;
+        margin-top: 0;
         &:after,
-        &:before{
-            top:auto;
-            bottom:-10px;
+        &:before {
+            top: auto;
+            bottom: -10px;
             @include transform(rotate(180deg));
         }
-        &:before{
-            bottom:-11px;
+        &:before {
+            bottom: -11px;
         }
 
     }
