--- a/src/style/bootstrap/utilities.scss
+++ b/src/style/bootstrap/utilities.scss
@@ -8,7 +8,9 @@
     @include box-shadow(0 1px 3px rgba(0, 0, 0, 0.13), 0 1px 3px rgba(0, 0, 0, 0.13));
     @include border-radius(4px)
 }
-
+.bold{
+    font-weight:bold;
+}
 .pos-rel,
 .pos_rel {
     position: relative;
