--- a/src/style/bootstrap/tabs.scss
+++ b/src/style/bootstrap/tabs.scss
@@ -67,7 +67,7 @@
             &:focus {
                 color: $color-text;
                 background-color: #FFF;
-                border-color:$color-default;
+                border-color:$color-slate;
                 border-bottom-color: transparent;
                 cursor: default;
             }
