--- a/src/style/bootstrap/typography.scss
+++ b/src/style/bootstrap/typography.scss
@@ -117,9 +117,9 @@ a {
 
 .ui_required {
     color: $color-danger;
-    font-size: $font-l;
     line-height: 1px;
     cursor: help;
+    font-family: Tahoma, sans-serif;
 }
 
 .ui_error {
