LPM-862 изменил цвет подсказок

--- a/src/style/bootstrap/color.scss
+++ b/src/style/bootstrap/color.scss
@@ -20,7 +20,7 @@ $color-extra-dark-snow: #E5E9F2;
 $color-title: $color-black;
 $color-subtitle: $color-steel;
 $color-text: $color-black;
-$color-hint: $color-gray;
+$color-hint: $color-smoke;
 
 //Interface colors
 $color-default: $color-silver;
