--- a/src/style/bootstrap/typography.scss
+++ b/src/style/bootstrap/typography.scss
@@ -1,16 +1,18 @@
-$font-m: $base-font-size;
-
 // --------------
-$font-l: percentage($multiplier);
-$font-xl: percentage($multiplier * $multiplier);
-$font-xxl: percentage($multiplier * $multiplier * $multiplier);
-
-$font-s: percentage(1 / $multiplier);
-$font-xs: percentage(1 / $multiplier / $multiplier);
+$font-m: 1rem;
+$font-l: 1.2rem;
+$font-xl: 1.44rem;
+$font-xxl: 1.728rem;
+$font-s: 0.83rem;
+$font-xs: 0.694rem;
 // --------------
+
+html {
+    font-size: $base-font-size;
+}
 
 body {
-    font-size: $base-font-size;
+    font-size: $font-m;
     font-family: $base-font-family;
     line-height: $base-line-height;
     cursor: default;
