--- a/src/style/bootstrap/button.scss
+++ b/src/style/bootstrap/button.scss
@@ -12,7 +12,7 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
 }
 
 .btn {
-    color: #FFF;
+    color:$color-text;
     text-align: center;
     border: 0;
     @include border-radius($base-border-radius);
@@ -35,7 +35,7 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
     vertical-align: middle;
 
     &:hover {
-
+        color:$color-text;
     }
 
     &:active {
@@ -351,7 +351,7 @@ $btn-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     }
 
     &:hover {
-        color: #FFF;
+        background:$color-dark-snow;
     }
 
     &:visited {
@@ -362,24 +362,28 @@ $btn-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     &.btn-primary.active {
         border-color: $color-primary;
         background: $color-primary;
+        color: #FFF;
     }
     &.btn-success:hover,
     &.btn-success:active,
     &.btn-success.active {
         border-color: $color-success;
         background: $color-success;
+        color: #FFF;
     }
     &.btn-info:hover,
     &.btn-info:active,
     &.btn-info.active {
         border-color: $color-info;
         background: $color-info;
+        color: #FFF;
     }
     &.btn-warning:hover,
     &.btn-warning:active,
     &.btn-warning.active {
         border-color: $color-warning;
         background: $color-warning;
+        color: $color-text;
     }
     &.btn-danger:hover,
     &.btn-danger:active,
