--- a/src/style/bootstrap/menu.scss
+++ b/src/style/bootstrap/menu.scss
@@ -810,6 +810,7 @@
         color: rgba(255, 255, 255, 0.9);
         text-decoration: none;
         cursor: pointer;
+        padding-right:10px;
     }
     .top-menu-single-item__link {
         padding: 8px 18px;
