--- a/src/style/bootstrap/vars.scss
+++ b/src/style/bootstrap/vars.scss
@@ -5,6 +5,6 @@ $btn-multiplier: 1.25;
 $base-font-size: 15px;
 $base-line-height: 1.4;
 //$base-font-family: "Open Sans", Helvetica Neue, Arial, Helvetica, sans-serif;
-$base-font-family: "CirceWebRegular", "Open Sans", Arial, Helvetica, sans-serif;
+$base-font-family: "Open Sans", Arial, Helvetica, sans-serif;
 $base-border-radius: 4px;
 $top-menu-height: 55px;$font-m: $base-font-size;
