убрал font-family из элементов вроде button,input и пересобрал CSS в сжатом виде

--- a/src/style/bootstrap/form.scss
+++ b/src/style/bootstrap/form.scss
@@ -16,7 +16,7 @@ $input-m-padding: round($base-input-height * $input-padding-miltiplier);
     line-height: 1;
     border: 1px solid $color-gray;
     width: 200px;
-    font-family: $base-font-family;
+    //font-family: $base-font-family;
     font-size: $font-m;
     height: $base-input-height;
     padding: 0 $input-m-padding;
