--- a/src/style/editor-style.scss
+++ b/src/style/editor-style.scss
@@ -24,7 +24,7 @@ select,
 textarea,
 #popup_list,
 .lpm-popover{
-    font-family: $base-font-family;
+    //font-family: $base-font-family;
     color: $color-text;
 }
 
