--- a/src/style/bootstrap/button.scss
+++ b/src/style/bootstrap/button.scss
@@ -25,7 +25,7 @@ button::-moz-focus-inner, input[type=submit]::-moz-focus-inner, input[type=butto
     white-space: nowrap;
     text-decoration: none !important;
     min-width: 4 * $step;
-    font-family: $base-font-family;
+    //font-family: $base-font-family;
     position: relative;
     text-shadow: 0 1px rgba(0, 0, 0, .1);
     font-size: $font-m;
