--- a/src/style/bootstrap/typography.scss
+++ b/src/style/bootstrap/typography.scss
@@ -8,13 +8,13 @@ $font-xs: 0.694rem;
 // --------------
 
 html {
-    font-size: $base-font-size;
+    //font-size: $base-font-size;
 }
 
 body {
-    font-size: $font-m;
-    font-family: $base-font-family;
-    line-height: $base-line-height;
+    //font-size: $font-m;
+    //font-family: $base-font-family;
+    //line-height: $base-line-height;
     cursor: default;
     color: $color-text;
 }
