--- a/src/style/bootstrap/main.scss
+++ b/src/style/bootstrap/main.scss
@@ -1,32 +1,32 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-:focus {
-    outline: none;
-}
+//* {
+//    box-sizing: border-box;
+//    margin: 0;
+//    padding: 0;
+//}
+//:focus {
+//    outline: none;
+//}
+//
+//html {
+//    height: 100%;
+//}
 
-html {
-    height: 100%;
-}
+//body {
+//    margin: 0;
+//    padding: 0;
+//    background: #eee;
+//    overflow-y: scroll;
+//    height: 100%;
+//}
 
-body {
-    margin: 0;
-    padding: 0;
-    background: #eee;
-    overflow-y: scroll;
-    height: 100%;
-}
-
-#nocss {
-    display: none;
-}
-
-#nojs {
-    display: block;
-    margin: 75px auto;
-    text-align: center;
-    max-width: 600px;
-}
+//#nocss {
+//    display: none;
+//}
+//
+//#nojs {
+//    display: block;
+//    margin: 75px auto;
+//    text-align: center;
+//    max-width: 600px;
+//}
 
