--- a/src/style/bootstrap/typography.scss
+++ b/src/style/bootstrap/typography.scss
@@ -7,24 +7,24 @@ $font-s: 0.83rem;
 $font-xs: 0.694rem;
 // --------------
 
-html {
+//html {
     //font-size: $base-font-size;
-}
+//}
 
-body {
+//body {
     //font-size: $font-m;
     //font-family: $base-font-family;
     //line-height: $base-line-height;
-    cursor: default;
-    color: $color-text;
-}
+    //cursor: default;
+    //color: $color-text;
+//}
 
-hr {
-    margin: 20px 0;
-    border: 0;
-    border-top: 1px solid #EEE;
-    border-bottom: 1px solid #FFF;
-}
+//hr {
+//    margin: 20px 0;
+//    border: 0;
+//    border-top: 1px solid #EEE;
+//    border-bottom: 1px solid #FFF;
+//}
 
 ul {
     li {
