--- a/src/style/bootstrap/button.scss
+++ b/src/style/bootstrap/button.scss
@@ -232,6 +232,10 @@ $btn-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     }
 }
 
+.btn-success:visited {
+    @extend .btn-success;
+}
+
 .btn-info {
     background: $color-info;
     color: #FFF;
