--- a/src/style/bootstrap/button.scss
+++ b/src/style/bootstrap/button.scss
@@ -236,6 +236,10 @@ $btn-xl-height: round(($base-button-height * $btn-multiplier * $btn-multiplier)/
     @extend .btn-success;
 }
 
+.btn-success:focus {
+    @extend .btn-success;
+}
+
 .btn-info {
     background: $color-info;
     color: #FFF;
