убрал стили верхней панели

--- a/src/style/bootstrap/dropdown.scss
+++ b/src/style/bootstrap/dropdown.scss
@@ -12,10 +12,10 @@ $dropdown-item-hover: #F3F7F9;
     content: "";
 }
 
-.dropdown, .dropup, .custom-dropdown, .custom-dropup {
-    position: relative;
-    display: inline-block;
-}
+//.dropdown, .dropup, .custom-dropdown, .custom-dropup {
+//    position: relative;
+//    display: inline-block;
+//}
 
 .dropdown-name {
     overflow: hidden;
