убрал стили верхней панели

--- a/src/style/bootstrap/typography.scss
+++ b/src/style/bootstrap/typography.scss
@@ -26,11 +26,11 @@ $font-xs: 0.694rem;
 //    border-bottom: 1px solid #FFF;
 //}
 
-ul {
-    li {
-        margin-left: 30px;
-    }
-}
+//ul {
+//    li {
+//        margin-left: 30px;
+//    }
+//}
 
 .font-xxl {
     font-size: $font-xxl;
