--- a/src/style/bootstrap/menu.scss
+++ b/src/style/bootstrap/menu.scss
@@ -92,55 +92,53 @@
         .top-menu-account-btn {
 
             .top-menu-item {
-                max-width: 210px;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                position: relative;
-                padding-right: 40px;
+                //max-width: 210px;
+                //overflow: hidden;
+                //text-overflow: ellipsis;
+                //white-space: nowrap;
+                //position: relative;
+                //padding-right: 40px;
                 .top-menu-user-icon {
-                    width: 28px;
-                    height: 28px;
-                    background: url(../../../web/images/profile-user.png);
-                    background-size: 28px;
-                    border-radius: 50%;
-                    display: inline-block;
-                    margin: 13px 10px 0 0px;
-                    float: left;
-                    line-height: $top-menu-height;
+                    //width: 28px;
+                    //height: 28px;
+                    //background: url(../../../web/images/profile-user.png);
+                    //background-size: 28px;
+                    //border-radius: 50%;
+                    //display: inline-block;
+                    //margin: 13px 10px 0 0px;
+                    //float: left;
+                    //line-height: $top-menu-height;
                 }
                 .fa {
-                    position: absolute;
-                    right: 20px;
-                    top: 50%;
-                    margin-top: -7px;
+                    //position: absolute;
+                    //right: 20px;
+                    //top: 50%;
+                    //margin-top: -7px;
                 }
             }
             .custom-dropdown-menu {
 
                 &.account-menu {
-                    top: 65px;
-                    height: auto;
-                    right: 0;
-                    left: auto;
-                    padding-top: 0;
-                    margin-top: 0;
+                    //top: 65px;
+                    //height: auto;
+                    //right: 0;
+                    //left: auto;
+                    //padding-top: 0;
+                    //margin-top: 0;
                     &:after {
-                        border-color: transparent transparent #F5F5F5 transparent;
-
+                        //border-color: transparent transparent #F5F5F5 transparent;
                     }
                     .account-menu__info {
-                        background: $color-dark-snow;
-                        border-bottom: 1px solid $color-default;
-
+                        //background: $color-dark-snow;
+                        //border-bottom: 1px solid $color-default;
                         .account-menu-email {
-                            max-width: 210px;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            white-space: nowrap;
-                            font-weight: bold;
-                            padding: 18px 20px 10px 20px;
-                            line-height: 1;
+                            //max-width: 210px;
+                            //overflow: hidden;
+                            //text-overflow: ellipsis;
+                            //white-space: nowrap;
+                            //font-weight: bold;
+                            //padding: 18px 20px 10px 20px;
+                            //line-height: 1;
                         }
                     }
                 }
@@ -149,18 +147,19 @@
         }
 
         .top-menu-item {
-            color: rgba(210, 210, 210, 0.9);
-            text-decoration: none;
-            float: none;
-            display: inline-block;
-            height: 100%;
-            padding: 0 15px;
-            line-height: $top-menu-height;
-            font-size: 14px;
+            //color: rgba(210, 210, 210, 0.9);
+            //text-decoration: none;
+            //float: none;
+            //display: inline-block;
+            //height: 100%;
+            //padding: 0 15px;
+            //line-height: $top-menu-height;
+            //font-size: 14px;
+
             &:hover,
             &:focus {
-                color: #FFF;
-                text-decoration: none;
+                //color: #FFF;
+                //text-decoration: none;
             }
             &.active {
             }
@@ -561,10 +560,10 @@
     .top-menu-item,
     .top-menu-item:hover,
     .top-menu-item:focus {
-        color: $color-title;
+        //color: $color-title;
         &.custom-dropdown-btn {
             &:hover {
-                background: $color-dark-snow;
+                //background: $color-dark-snow;
             }
         }
     }
